--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -13,8 +13,11 @@
     "next-env.d.ts",
     "next.config.js",
     ".next/types/**/*.ts"
-  ],
+, "tailwind.config.ts"  ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "paths": {
+      "@/*": ["./*"]
+    }
 }
